--- a/DockerFile
+++ b/DockerFile
@@ -10,6 +10,9 @@ COPY package*.json ./
 # Install dependencies
 RUN npm install
 
+# Install nodemon globally for better performance
+RUN npm install -g nodemon
+
 # Copy the rest of the application code
 COPY . .
 
